temporary fix for clamp() not working on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -143,8 +143,7 @@ body, h1, h2, h3 {
 
 h1 {
 
-  min-height: 0vw;
-  font-size: clamp(3.75rem, 5.56vw, 5rem);
+  font-size: 3.75rem;
   line-height: 75%;
   letter-spacing: -1px;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -158,7 +157,7 @@ h1 {
 
 h2 {
 
-  font-size: clamp(1.87rem, 2.78vw, 2.5rem);
+  font-size: 1.87rem;
   line-height: 75%;
   margin: 1.5rem 0;
 
@@ -166,9 +165,33 @@ h2 {
 
 h3 {
 
-  font-size: clamp(1.5rem, 1.39vw, 2rem);
+  font-size: 1.5rem;
   line-height: 75%;
   margin: 1.5rem 0;
+
+}
+
+@media (min-height: 576px) {
+
+  /* Temporary to clamp() not working on smaller screens */
+
+  h1 {
+
+    font-size: clamp(3.75rem, 5.56vw, 5rem);
+
+  }
+
+  h2 {
+
+    font-size: clamp(1.87rem, 2.78vw, 2.5rem);
+
+  }
+
+  h3 {
+
+    font-size: clamp(1.5rem, 1.39vw, 2rem);
+
+  }
 
 }
 
